Implemented Client Console App

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ServiceURL": {
+    "IdentityURL": "http://localhost:5000"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
